--- a/index.html
+++ b/index.html
@@ -100,23 +100,7 @@
                 <p>we identify two properties in dialogue modeling, i.e., locality and isotropy, and present a simple method for dialogue representation calibration, namely SimDRC, to build isotropic and conversational feature spaces. Experimental results show that our approach significantly outperforms the current state-of-the-art models on three dialogue tasks across the automatic and human evaluation metrics.</p>
               </td>
             </tr>
-            
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/rbs.png" alt="blind-date" width="200" height="100">
-              </td>
-              <td width="75%" valign="middle">
-                <a href="https://arxiv.org/abs/2305.07988">
-                  <span class="papertitle">Reconstruct Before Summarize: An Efficient Two-Step Framework for Condensing and Summarizing Meeting Transcripts</span>
-                </a>
-                <br>
-                <strong>Haochen Tan</strong>, <a href="https://hahahawu.com/">Han Wu</a>, Wei Shao, Xinyun Zhang, Mingjie Zhan, Zhaohui Hou, Ding Liang, Linqi Song</a>
-                <br>
-                <em>EMNLP 2023</em>
-                <p>we propose a two-step framework, Reconstruct before Summarize (RbS), for effective and efficient meeting summarization. RbS first leverages a self-supervised paradigm to annotate essential contents by reconstructing the meeting transcripts. Secondly, we propose a relative positional bucketing (RPB) algorithm to equip (conventional) summarization models to generate the summary.</p>
-              </td>
-            </tr>
-
+           
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/zero_shot.png" alt="blind-date" width="200" height="100">
@@ -148,6 +132,23 @@
                 <p>In this paper, we propose a semantic-aware contrastive learning framework for sentence embeddings, termed Pseudo-Token BERT (PT-BERT), which is able to explore the pseudo-token space (i.e., latent semantic space) representation of a sentence while eliminating the impact of superficial features such as sentence length and syntax. </p>
               </td>
             </tr>
+
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/rewrite.jpg" alt="blind-date" width="200" height="100">
+              </td>
+              <td width="75%" valign="middle">
+                <a href="https://aclanthology.org/2020.emnlp-main.537/">
+                  <span class="papertitle">Semantic Role Labeling Guided Multi-turn Dialogue ReWriter</span>
+                </a>
+                <br>
+                Kun Xu, <strong>Haochen Tan</strong>, Linfeng Song, Han Wu, Haisong Zhang, Linqi Song, Dong Yu
+                <br>
+                <em>EMNLP 2020</em>
+                <p> Existing attentive models attend to all words without prior focus, which results in inaccurate concentration on some dispensable words. In this paper, we propose to use semantic role labeling (SRL), which highlights the core semantic information of who did what to whom, to provide additional guidance for the rewriter model.</p>
+              </td>
+            </tr>
+
 
 
 
