--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>I'm a PhD student in the Computer Science Department of <a href="https://www.cs.cityu.edu.hk/">City University of Hong Kong</a> in HKSAR. My PhD supervisor is <a href="https://sites.google.com/site/aisquaredlab/">Prof. Linqi Song</a>. Currently I am a research intern at <a href="https://www.noahlab.com.hk/#/home">Noah's Ark Lab</a> under the supervision of <a href="https://cartus.github.io/">Zhijiang Guo</a>.
                 </p>
                 <p>
-                  At CityU, I work on the sentence comprehension, long sequence compression and evaluation. Before joined Prof. Song's team, I was a research assistant under the supversion of <a href="https://scholar.google.com.hk/citations?user=J4aqOWUAAAAJ&hl=en">Dr. Bernard Chiu</a>. In my undergraduate years, I was advised by <a href="https://faculty.uestc.edu.cn/fancong/en/jsxx/194733/jsxx/jsxx.htm">Cong Fan</a> at <a href="https://www.uestc.edu.cn/">UESTC</a>.
+                  At CityU, I work on the sentence comprehension, long sequence compression and evaluation. Before joined Prof. Song's team, I was a research assistant under the supversion of <a href="https://scholar.google.com.hk/citations?user=J4aqOWUAAAAJ&hl=en">Dr. Bernard Chiu</a>. In my undergraduate years, I was advised by <a href="https://faculty.uestc.edu.cn/fancong/en/jsxx/194733/jsxx/jsxx.htm">Prof. Cong Fan</a> at <a href="https://www.uestc.edu.cn/">UESTC</a>.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:haochetan2-c@my.city.edu.hk">Email</a> &nbsp;/&nbsp;
