--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <br>
                 <strong>Haochen Tan</strong>, <a href="https://cartus.github.io/">Zhijiang Guo</a>, Zhan Shi, Lu Xu, Zhili Liu, Yunlong Feng, Xiaoguang Li, Yasheng Wang, Lifeng Shang, Qun Liu, Linqi Song</a>
                 <br>
-                <em>Under Review</em>, 2024
+                <em>ACL</em>, 2024
                 <br>
                 <p>In this paper, we propose PROXYQA, an innovative framework dedicated to the assessment of long-text generation. PROXYQA comprises in-depth human-curated metaquestions spanning various domains, each accompanied by specific proxy-questions with pre-annotated answers.</p>
               </td>
